--- a/todo/templates/todo/detail.html
+++ b/todo/templates/todo/detail.html
@@ -24,7 +24,8 @@
 
     <div>
       <a href="{% url 'index' %}">Top</a>
-    </div>
+      | <a href="{% url 'update' task_id %}">Edit</a>
+      </div>
   </body>
 
 </html>
