--- a/todo/templates/todo/detail.html
+++ b/todo/templates/todo/detail.html
@@ -22,10 +22,10 @@
       {% endif %}
     </ul>
 
-    <div>
-      <a href="{% url 'index' %}">Top</a>
-      | <a href="{% url 'update' task_id %}">Edit</a>
-      </div>
+  <div>
+  <a href="{% url 'index' %}">Top</a>
+  | <a href="{% url 'update' task.id %}">Edit</a>
+  </div>
   </body>
 
 </html>
