--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -29,7 +29,8 @@
 
     <div>
       <a href="{% url 'index' %}?order=due">Sort by Due Date</a> |
-      <a href="{% url 'index' %}?order=post">Sort by Posted Date</a>
+      <a href="{% url 'index' %}?order=post">Sort by Posted Date</a> |
+      <a href="{% url 'index' %}?order=title_length">Sort by Title Length</a> 
     </div>
 
     {% for task in tasks %}
@@ -49,5 +50,4 @@
     </div>
     {% endfor %}
   </body>
-
 </html>
