--- a/todo/templates/todo/edit.html
+++ b/todo/templates/todo/edit.html
@@ -9,20 +9,20 @@
   </head>
 
   <body>
-    <h1>Edit task</h1>
-    <p>You can edit tasks from the following form.</p>
+    <h1>タスクの編集</h1>
+    <p>タスクの編集が出来ます。</p>
     <form action="{% url 'update' task.id%}" method="post">
       {% csrf_token %}
       <div>
-        <label for="titleInput">Title</label><br>
+        <label for="titleInput">タイトル</label><br>
         <input id="titleInput" name="title" type="text" placeholder="Input title" value="{{ task.title }}">
       </div>
       <div>
-        <label for="dueInput">Due at:</label><br>
+        <label for="dueInput">期限</label><br>
         <input id="dueInput" name="due_at" type="datetime-local" value="{{ task.due_at |date:"Y-m-d H:i" }}">
       </div>
       <div>
-        <button type="submit">Submit</button>
+        <button type="submit">編集終了</button>
       </div>
     </form>
     <br>
