--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -9,42 +9,42 @@
   </head>
 
   <body>
-    <h1>Sample To Do Application</h1>
-    <p>You can submit tasks from the following form.</p>
+    <h1>タスク管理アプリ</h1>
+    <p>タスクを管理しましょう</p>
     <form action="{% url 'index' %}" method="post">
       {% csrf_token %}
       <div>
-        <label for="titleInput">Title</label><br>
+        <label for="titleInput">タイトル</label><br>
         <input id="titleInput" name="title" type="text" placeholder="Input title">
       </div>
       <div>
-        <label for="dueInput">Due at:</label><br>
+        <label for="dueInput">期限</label><br>
         <input id="dueInput" name="due_at" type="datetime-local">
       </div>
       <div>
-        <button type="submit">Submit</button>
+        <button type="submit">追加</button>
       </div>
     </form>
     <br>
 
     <div>
-      <a href="{% url 'index' %}?order=due">Sort by Due Date</a> |
-      <a href="{% url 'index' %}?order=post">Sort by Posted Date</a> |
-      <a href="{% url 'index' %}?order=title_length">Sort by Title Length</a> 
+      <a href="{% url 'index' %}?order=due">期日順にソート</a> |
+      <a href="{% url 'index' %}?order=post">追加順にソート</a> |
+      <a href="{% url 'index' %}?order=title_length">タイトルの長さ順にソート</a> 
     </div>
 
     {% for task in tasks %}
     <div class="text">
       <h2><a href="{% url 'detail' task.id %}">{{ task.title }}</a></h2>
       <ul>
-        <li>Posted at: {{ task.posted_at }}</li>
+        <li>追加日: {{ task.posted_at }}</li>
         {% if task.due_at %} 
-        <li>Due at: {{ task.due_at }}</li>
+        <li>期限 {{ task.due_at }}</li>
         {% endif %}
         {% if task.completed %} 
-        <li>Status: Completed</li>
+        <li>進捗: Completed</li>
         {% else %}
-        <li>Status: Not Completed</li>
+        <li>進捗: Not Completed</li>
         {% endif %}
       </ul>
     </div>
